# markdown-parser-rust

./: Cargo.toml  README.md  package-lock.json
docs/: index.html
docs/assets/: index-5d04b0a5.js  index-C5zkJ2oe.css  index-b8d10b3e.js  index-c30a4173.js  index-nOqBcK_B.js  markdown_parser_bg-D7tfr4ib.wasm  markdown_parser_bg-a7af16c4.wasm  markdown_parser_bg-ef933088.wasm
src/: lib.rs  main.rs
src/parser/: list_parser.rs  mod.rs  tags.rs  tests.rs  utils.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
web/src/: App.svelte  app.css
web/src/components/: Header.svelte  MarkdownInput.svelte  MarkdownPreview.svelte
web/src/lib/: stores.js  stores.ts
