[package]
name = "markdown_parser"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.11"
web-sys = {version= "0.3.59", features= ["console"]}
console_error_panic_hook="0.1.7"
regex = "1.6.0"
