[package]
name = "markdown_parser"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.91"
web-sys = {version= "0.3.68", features= ["console"]}
console_error_panic_hook="0.1.7"
regex = "1.10.3"
clap = { version= "4.5.1", features=["derive"]}
